Adding basic Estimote beacon capability. While hard-coded, there's a demo Fragment that demonstrates toggling a binary switch device by proximity.

--- a/app/src/main/res/menu/global.xml
+++ b/app/src/main/res/menu/global.xml
@@ -5,4 +5,9 @@
         android:orderInCategory="100"
         android:showAsAction="never" />
 
+    <item android:id="@+id/action_beacon_demo"
+        android:title="Beacons"
+        android:orderInCategory="99"
+        android:showAsAction="never" />
+
 </menu>
